# Simple_Desktop_Project_Using_CPP

./: CMakeLists.txt  main.cpp
include/: CSVHelper.h  Employee.h  EmployeeManager.h
src/: CSVHelper.cpp  Employee.cpp  EmployeeManager.cpp
